--- a/public/assets/css/form.css
+++ b/public/assets/css/form.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
+@import url(//db.onlinewebfonts.com/c/d5eef793c51ffd65df6fb6dd1ec86f1c?family=CreamyScript);
 
 .signupSection {
     background: url(https://source.unsplash.com/TV2gg2kZD1o/1600x800);
@@ -16,7 +17,7 @@
 }
 
 .info {
-    width: 45%;
+    width: 40%;
     background: rgba(20, 20, 20, 0.8);
     padding: 30px 0;
     border-right: 5px solid rgba(30, 30, 30, 0.8);
@@ -24,18 +25,16 @@
 .info h2 {
     padding-top: 30px;
     font-weight: 300;
+    font-family: "CreamyScript";
 }
 .info p {
     font-size: 18px;
-}
-.info .icon {
-    font-size: 8em;
-    padding: 20px 0;
-    color: #0ab4b4;
+    font-family: "CreamyScript";
 }
 
+
 .signupForm {
-    width: 70%;
+    width: 60%;
     padding: 30px 0;
     background: rgba(20, 40, 40, 0.8);
     transition: .2s;
@@ -63,7 +62,7 @@
     padding: 0;
 }
 
-#join-btn {
+.join-btn {
     border: 1px solid #0ab4b4;
     background: rgba(20, 20, 20, 0.6);
     font-size: 18px;
@@ -73,7 +72,7 @@
     cursor: pointer;
     transition: .4s;
 }
-#join-btn:hover {
+.join-btn:hover {
     background: rgba(20, 20, 20, 0.8);
     padding: 10px 80px;
 }
