--- a/templates/chef/index.html.twig
+++ b/templates/chef/index.html.twig
@@ -12,7 +12,7 @@
     {% block stylesheets %}
         <link href="{{ asset('assets/css/header.css') }}" rel="stylesheet" media="all">
         <link href="{{ asset('assets/css/countdown.css') }}" rel="stylesheet" media="all">
-        <link href="{{ asset('assets/css/slider.css') }}" rel="stylesheet" media="all">
+        <link href="{{ asset('assets/css/main.css') }}" rel="stylesheet" media="all">
         <link href="{{ asset('assets/css/chefs.css') }}" rel="stylesheet" media="all">
         <link href="{{ asset('assets/css/form.css') }}" rel="stylesheet" media="all">
     {% endblock %}
@@ -25,6 +25,17 @@
             <a class="nav-item" href="#">Nos Chefs</a>
             <a class="nav-item" href="https://www.panzani.fr/nos-recettes">Nos Recettes</a>
         </nav>
+        <style>
+            .nav-item{
+                text-decoration: none;
+                color: black;
+                font-weight: bold;
+            }
+            .nav-item:hover{
+                text-decoration: underline #e6002c;
+                text-decoration-thickness: 3px;
+            }
+        </style>
         <div class="search">
             <input class="search-input" type="text" placeholder="Rechercher...">
             <button class="search-button">Rechercher</button>
@@ -35,20 +46,17 @@
     </header>
 
 
-    <div class="carousel">
-        <div class="carousel-infos">
-           <h2>Nos chefs</h2>
-            <p>Découvrez les nouveaux chefs à domocile Panzani. Des recettes originales à base de 100% d’ingrédients d’origine naturelle. Plus qu’un chef : un véritable accompagnement pour vos pâtes !</p>
+    <div class="main">
+        <img src="{{ asset('assets/images/background.png') }}">
+        <div>
+            <h1>Les chefs à domiciles</h1>
+            <h2>Par Panzani</h2>
+            <p>
+                Vous n'avez plus à vous soucier des courses ni de la cuisine, vous pouvez simplement vous détendre pendant que le chef s'occupe de tout. Il sélectionne les meilleurs ingrédients Panzani pour préparer un menu personnalisé en fonction de vos goûts et de vos préférences. Vous pouvez choisir parmi une variété de plats allant des pâtes traditionnelles aux recettes plus créatives
+            </p>
+            <a class="btn-discorver" href="#chefs">Découvrir</a>
         </div>
-        <div class="carousel-container">
-            <div class="carousel-item"><img src="https://backend.panzani.fr/app/uploads/2022/05/slider-completement-bon-rouge-image2.png"></div>
-            <div class="carousel-item"><img src="https://backend.panzani.fr/app/uploads/2022/11/slider-3-minutes-vdef.png"></div>
-            <div class="carousel-item"><img src="https://backend.panzani.fr/app/uploads/2023/01/slider-legumes-du-marche-desktop.png"></div>
-        </div>
-        <button class="carousel-btn prev-btn">&#10094;</button>
-        <button class="carousel-btn next-btn">&#10095;</button>
     </div>
-
 
 
     <div class="countdown">
@@ -58,10 +66,10 @@
     </div>
 
 
-    <div class="chefs">
+    <div class="chefs" id="chefs">
         {% for c in chefs %}
             <div class="chef">
-                <img src="https://www.studyrama.com/sites/default/files/metier/2022-07/arton1008.png" alt="Photo">
+                <img src="{{ asset('assets/images/chef8.jpg') }}" alt="Photo">
                 <h2>{{c.nom }} {{ c.prenom }}</h2>
                 <ul>
                     <li class="price">{{ c.prix }} €</li>
@@ -70,39 +78,72 @@
             </div>
         {% endfor %}
     </div>
+    <style>
+        .chef img{
+            object-fit: cover;
+        }
+    </style>
 
 
     <div class="signupSection">
         <div class="info">
-            <h2>Mission to Deep Space</h2>
-            <i class="icon ion-ios-ionic-outline" aria-hidden="true"></i>
-            <p>The Future Is Here</p>
+            <h2>- 10% sur votre Réservation</h2>
+            <p>Profiter de 10% de réduction sur votre première réservation d'un chef à domicile.<br> Pour cela il vous suffit de remplir ce formulaire</p>
         </div>
-        <form action="{{ path('app_client_new') }}" method="POST" class="signupForm" name="signupform">
-            <h2>Sign Up</h2>
+
+
+        {{ form_start(form, {'attr': {'class': 'signupForm'}}) }}
+            <h2>Je profite de l'offre !</h2>
             <ul class="noBullet">
                 <li>
-                    <label for="nom">Nom :</label>
-                    <input class="inputFields" type="text" id="nom" name="nom" required>
+                    <label for="nom">{{ form_label(form.Nom) }}</label>
+                    {{ form_widget(form.Nom, {'attr': {'class': 'inputFields'}}) }}
                 </li>
                 <li>
-                    <label for="email">E-mail :</label>
-                    <input  class="inputFields"type="email" id="email" name="email" required>
+                    <label for="email">{{ form_label(form.Email) }}</label>
+                    {{ form_widget(form.Email, {'attr': {'class': 'inputFields'}}) }}
                 </li>
                 <li>
-                    <label for="tel">Téléphone :</label>
-                    <input class="inputFields" type="tel" id="tel" name="tel" pattern="[0-9]{10}" required>
+                    <label for="tel">{{ form_label(form.Telephone) }}</label>
+                    {{ form_widget(form.Telephone, {'attr': {'class': 'inputFields'}}) }}
                 </li>
                 <li>
-                    <label for="age">Âge :</label>
-                    <input class="inputFields" type="number" id="age" name="age" min="18" max="100" required>
+                    <label for="age">{{ form_label(form.Age) }}</label>
+                    {{ form_widget(form.Age, {'attr': {'class': 'inputFields'}}) }}
                 </li>
                 <li id="center-btn">
-                    <input type="submit" id="join-btn" name="join" alt="Join" value="J'en profite">
+                    <button class="btn join-btn">{{ button_label|default('Obtenir') }}</button>
                 </li>
             </ul>
-        </form>
+        {{ form_end(form) }}
 
     </div>
+
+    <footer>
+        <img src="{{ asset('assets/images/footer.png') }}">
+    </footer>
+    <style>
+        @import url(//db.onlinewebfonts.com/c/d5eef793c51ffd65df6fb6dd1ec86f1c?family=CreamyScript);
+
+        .info h2{
+            font-family: "CreamyScript";
+            font-size: 2rem;
+            font-weight: bold;
+        }
+        .info p{
+            font-family: "CreamyScript";
+            font-size: 1.5rem;
+            color: #e6002c;
+            margin: 0 10%;
+        }
+        footer img{
+            width: 100%;
+            padding-top: 40%;
+        }
+    </style>
+
+
+
+
 
 {% endblock %}
